created working scaffolds

--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -32,13 +32,13 @@
   </div>
 
   <div class="field">
-    <%= form.label :director_id_id %>
-    <%= form.text_field :director_id_id %>
+    <%= form.label :director_id %>
+    <%= form.text_field :director_id %>
   </div>
 
   <div class="field">
-    <%= form.label :user_id_id %>
-    <%= form.text_field :user_id_id %>
+    <%= form.label :user_id %>
+    <%= form.text_field :user_id %>
   </div>
 
   <div class="actions">
