--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -22,8 +22,8 @@
         <td><%= movie.genre %></td>
         <td><%= movie.year %></td>
         <td><%= movie.oscar %></td>
-        <td><%= movie.director %></td>
-        <td><%= movie.user %></td>
+        <td><%= movie.director.name %></td>
+        <td><%= movie.user.firstname + " " + movie.user.lastname %></td>
         <td><%= link_to 'Show', movie %></td>
         <td><%= link_to 'Edit', edit_movie_path(movie) %></td>
         <td><%= link_to 'Destroy', movie, method: :delete, data: { confirm: 'Are you sure?' } %></td>
